[gd_scene load_steps=4 format=2]

[ext_resource path="res://Src/GUI/ControlSelector.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=2]
[ext_resource path="res://Src/Screens/ControlsScreen.gd" type="Script" id=3]

[node name="ControlsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.016
anchor_top = 0.028
anchor_right = 0.342
anchor_bottom = 0.119
margin_left = -0.480001
margin_top = -1.16
margin_right = 802.24
margin_bottom = 0.32
custom_constants/separation = 56
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoBackButton" type="Button" parent="HBoxContainer"]
margin_right = 94.0
margin_bottom = 67.0
theme = ExtResource( 2 )
text = "Go Back"
flat = true

[node name="Label" type="Label" parent="HBoxContainer"]
margin_left = 150.0
margin_top = 20.0
margin_right = 295.0
margin_bottom = 47.0
theme = ExtResource( 2 )
text = "Assign Controls"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 231.0
margin_top = 100.0
margin_right = -100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 949.0
margin_bottom = 520.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlSelectorContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0
custom_constants/separation = 53
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlSelector" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_right = 495.0
margin_bottom = 35.0
size_flags_horizontal = 6
action_name = "movement_up"

[node name="ControlSelector2" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_top = 88.0
margin_right = 495.0
margin_bottom = 123.0
size_flags_horizontal = 6
action_name = "movement_down"

[node name="ControlSelector3" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_top = 176.0
margin_right = 495.0
margin_bottom = 211.0
size_flags_horizontal = 6

[node name="ControlSelector5" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_top = 264.0
margin_right = 495.0
margin_bottom = 299.0
size_flags_horizontal = 6
action_name = "movement_left"

[node name="ControlSelector6" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_top = 352.0
margin_right = 495.0
margin_bottom = 387.0
size_flags_horizontal = 6
action_name = "Action"

[node name="ControlSelector7" parent="MarginContainer/Panel/ControlSelectorContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 453.0
margin_top = 440.0
margin_right = 495.0
margin_bottom = 475.0
size_flags_horizontal = 6
action_name = "Boost"
[connection signal="focus_entered" from="HBoxContainer/GoBackButton" to="." method="_on_GoBackButton_focus_entered"]
[connection signal="mouse_entered" from="HBoxContainer/GoBackButton" to="." method="_on_GoBackButton_focus_entered"]
[connection signal="pressed" from="HBoxContainer/GoBackButton" to="." method="_on_GoBackButton_pressed"]
